Modify enemies to work with multiple players

--- a/source/todo.txt
+++ b/source/todo.txt
@@ -7,3 +7,10 @@ FINAL TOUCHES:
 THINGS THAT WOULD BE NICE:
 - make new segments
 - flip segments horizontally
+
+COOP TODO:
+- add controller support
+- fix enemies
+- fix death
+- fix boss fight
+- fix camera
